# zombie-imp

./: CHANGELOG.md  MANIFEST.in  README.md  imp.py  pyproject.toml  tox.ini
.github/workflows/: main.yml
test_zombie_imp/: test_imp.py  test_pkgutil_reanimations.py  test_same_files.py  test_zombie_imp.py
zombie_imp/: __init__.py  imp_3_11.py  pkgutil.py
